--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 INSTALLATION_TOKEN_PATH =  "./Secrets/GithubConnection/_keys/installationToken.json"
 GITHUB_KEY_PATH = "./Secrets/GithubConnection/_keys/github_private_key.pem"
+OUTPUT_FILE_PATH = "./projectTasks.xlsx"
